{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "268a09b0-7269-4777-ba1b-681f6c5f4459",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Button",
                    "id": "c38fe7a5-671e-4beb-a425-f0877158b6a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "7dd9d5be-4a9e-4636-975b-f5a361e5d71a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Item1",
                    "type": "Button",
                    "id": "b13bf1c6-74f2-483c-9a63-3fea1a3f498a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Item2",
                    "type": "Button",
                    "id": "31a4d680-7d98-4702-873d-a1d4961296f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Item3",
                    "type": "Button",
                    "id": "3e237683-fbd9-4182-8717-4276f4ac9b8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Item4",
                    "type": "Button",
                    "id": "450919ed-dbea-4e00-8204-cbcd7f867d25",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Item5",
                    "type": "Button",
                    "id": "2df31b79-5018-47b0-abaa-84f6ea15ec05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "5d18466a-5941-4314-bcbe-f96ec74e8904",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "66178e2d-79bd-44d9-8f00-05c474c76d9b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HoldWalk",
                    "type": "Button",
                    "id": "39a39e4a-0622-4e85-ba38-5e7553b95a1d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PressRelease",
                    "type": "Button",
                    "id": "b1948746-8d50-43cf-b2a8-f5fdfc695f00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HoldInteract",
                    "type": "Button",
                    "id": "73fb4fd6-f4ee-4283-b0d2-0b18f5c0b2db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "85d668f0-c80a-4b96-849c-fb8d3d167be3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "93ccc32f-1c28-42a6-9dde-7e5a059b9c90",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "499e138f-deaa-4835-8f2e-13a0b0df2a8a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9ae1b9e4-5c04-4de5-af03-3c6605af396a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8469189f-0b39-4cae-80b5-eb653cfd058b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "69edc5c7-7adc-4314-95e7-1b4be4c88324",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "da9cbfc7-4bc4-4c8f-919d-49cf9c6f5467",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82d95c97-7c27-4e04-afa2-5466276b4aff",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Item1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "783a43dd-0367-4eb8-acd2-48faa48446a8",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Item2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa0ae18c-a69c-48f1-ad30-c0890bd08d1b",
                    "path": "<Keyboard>/3",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Item3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "540f3128-bd08-4b13-b870-ed27b80cdf23",
                    "path": "<Keyboard>/4",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Item4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c8b4de7-14fa-4e0b-a42f-8d0d6aff8224",
                    "path": "<Keyboard>/5",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Item5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14c21832-8b64-4675-8275-01c04c262d94",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75c96855-0c30-4844-b625-8f94b82d4b5a",
                    "path": "<Keyboard>/i",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1321e0c9-cccc-43b0-9640-2e80e1e44195",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "HoldWalk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac0e1f82-d6da-40e2-9758-2f37d11d27af",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "PressRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75bfb5f3-7cd6-4e43-a9e7-f7b4d44218bc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=2)",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "HoldInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}